feat: personalize homepage content, update avatar image, and introduce README documentation.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alex Zhou - NETRUNNER</title>
-    <meta name="description" content="Alex Zhou's Cyberpunk Personal Homepage.">
+    <title>Jingtian Zhou - NETRUNNER</title>
+    <meta name="description" content="Jingtian Zhou's Cyberpunk Personal Homepage.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Rajdhani:wght@300;400;500;600;700&family=Share+Tech+Mono&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
 
     <header class="header">
         <div class="container">
-            <a href="#" class="logo" data-text="ALEX.ZHOU">ALEX.ZHOU_</a>
+            <a href="#" class="logo" data-text="JINGTIAN.ZHOU">JINGTIAN.ZHOU_</a>
             <nav class="navbar">
                 <ul class="nav-links">
                     <li><a href="#home" data-text="SYSTEM">SYSTEM</a></li>
@@ -39,8 +39,8 @@
             <div class="container hero-content">
                 <div class="hero-text">
                     <span class="greeting">STATUS: ONLINE</span>
-                    <h1 class="glitch" data-text="Alex Zhou">Alex Zhou</h1>
-                    <p class="subtitle">NETRUNNER // FULL STACK DEV</p>
+                    <h1 class="glitch" data-text="Jingtian Zhou">Jingtian Zhou</h1>
+                    <p class="subtitle">NETRUNNER // Front-END DEVELOPER</p>
                     <p class="description">Constructing digital realities. Transforming chaotic data into elegant code structures.</p>
                     <div class="cta-buttons">
                         <a href="#portfolio" class="cyber-btn primary">INITIALIZE_PROJECTS</a>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="hero-image">
                     <div class="cyber-frame">
-                        <img src="avatar.png" alt="Alex Zhou Avatar">
+                        <img src="avatar.jpg" alt="Jingtian Zhou Avatar">
                         <div class="frame-corner top-left"></div>
                         <div class="frame-corner top-right"></div>
                         <div class="frame-corner bottom-left"></div>
@@ -65,7 +65,7 @@
                 <div class="about-content">
                     <div class="about-text cyber-card">
                         <div class="card-header">BIO_LOG</div>
-                        <p>Full-stack operative with 5 years of field experience. Specializing in high-performance web architecture and user interface protocols. Open source contributor and technical data archivist.</p>
+                        <p>Front-end developer with 4 years of field experience. Specializing in high-performance web architecture and user interface protocols. Open source contributor and technical data archivist.</p>
                     </div>
                     <div class="skills-container cyber-card">
                         <div class="card-header">SKILL_MATRIX</div>
@@ -86,7 +86,7 @@
                             </div>
                             <div class="skill-item">
                                 <div class="skill-info">
-                                    <span>NODE / PYTHON</span>
+                                    <span>NODE</span>
                                     <span>80%</span>
                                 </div>
                                 <div class="progress-bar"><div class="progress" style="width: 80%"></div></div>
@@ -169,28 +169,28 @@
                             <i class="fas fa-envelope"></i>
                             <div>
                                 <h4>MAIL_DROP</h4>
-                                <p>contact@alexzhou.dev</p>
+                                <p>18102376260@163.com</p>
                             </div>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-phone"></i>
                             <div>
                                 <h4>COMMS</h4>
-                                <p>+86 138 0000 0000</p>
+                                <p>+86 181 0237 6260</p>
                             </div>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
                             <div>
                                 <h4>COORDINATES</h4>
-                                <p>SHANGHAI, CN</p>
+                                <p>CHENGDU, CN</p>
                             </div>
                         </div>
                         <div class="social-links">
-                            <a href="#"><i class="fab fa-github"></i></a>
-                            <a href="#"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://github.com/tutouxiaozhou"><i class="fab fa-github"></i></a>
+                            <!-- <a href="#"><i class="fab fa-linkedin"></i></a>
                             <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="#"><i class="fab fa-dribbble"></i></a>
+                            <a href="#"><i class="fab fa-dribbble"></i></a> -->
                         </div>
                     </div>
                     <form class="contact-form">
@@ -212,7 +212,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2077 Alex Zhou. SYSTEM_SECURE.</p>
+            <p>&copy; 2077 Jingtian Zhou. SYSTEM_SECURE.</p>
         </div>
     </footer>
 
