feat: Implement mobile responsiveness for the article page and enhance the main page's adaptive layout and navigation.

--- a/article.html
+++ b/article.html
@@ -96,6 +96,32 @@
             margin-top: 100px;
             animation: blink 1s infinite;
         }
+
+        /* Mobile Responsiveness */
+        @media (max-width: 768px) {
+            .article-container {
+                padding-top: 120px;
+                padding-left: 1.5rem;
+                padding-right: 1.5rem;
+            }
+
+            .article-title {
+                font-size: 2rem;
+                word-break: break-word;
+            }
+
+            .article-content {
+                font-size: 1rem;
+            }
+
+            .article-content h2 {
+                font-size: 1.5rem;
+            }
+
+            .back-link {
+                font-size: 0.9rem;
+            }
+        }
     </style>
 </head>
 <body>
